# c-gameboy

./: .gitignore
gameboy-emulator/: CMakeLists.txt  a.out  main.cpp  test.cpp
gameboy-emulator/gui/: metaCartridge.cpp  metaGameboy.cpp  metaRegisters.cpp
gameboy-emulator/gui/include/: metaCartridge.h  metaGameboy.h  metaRegisters.h
gameboy-emulator/include/: cartridge.h  cpu.h  gameboy.h  gui_breakpoints.h  gui_debug.h  gui_history.h  gui_viewer.h  joypad.h  mainwindow.h  mbc.h  mbc0.h  mbc1.h  mmu.h  ppu.h  registers.h  serial.h  sound.h  timer.h
gameboy-emulator/include/gui/: gui_debug.h  gui_history.h  gui_viewer.h
gameboy-emulator/include/mbcs/: mbc.h  mbc0.h  mbc1.h  mbc2.h  mbc5.h
gameboy-emulator/include/other/: constants.h  testing.h
gameboy-emulator/src/: alu.cpp  cartridge.cpp  cpu.cpp  gameboy.cpp  gui_breakpoints.cpp  gui_debug.cpp  gui_history.cpp  gui_viewer.cpp  instructions.cpp  joypad.cpp  mainwindow.cpp  mainwindow.ui  mmu.cpp  ppu.cpp  registers.cpp  serial.cpp  sound.cpp  timer.cpp
gameboy-emulator/src/gui/: gui_breakpoints.cpp  gui_debug.cpp  gui_history.cpp  gui_viewer.cpp
gameboy-emulator/src/mbcs/: mbc.cpp  mbc0.cpp  mbc1.cpp  mbc2.cpp  mbc5.cpp
gameboy-emulator/src/other/: testing.cpp
